# graphicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_NOTICE.md  PROJECT_OVERVIEW.md  PROJECT_OVERVIEW_en.md  README.md  REFACTORING_COMPLETE.md  imgui.ini  pipeline.txt
.github/instructions/: cpp_doxygen.instructions.md
examples/: README.md  lygia_explorer.cpp  lygia_shader_demo.cpp  main_test_node_editor.cpp  shader_manager_demo.cpp
scripts/: build_glew.sh
shaders/: default.frag  default.frag.txt  noise.glsl  passthrough.vert  procedural_terrain.frag  voronoi.glsl  voronoi_pattern.frag
src/: PipelineParser.cpp  PipelineParser.h  Shader.cpp  Shader.h  main.cpp
src/code_interpreter/: CodeInterpreter.cpp  CodeInterpreter.h  main.cpp
src/core/: NodeGraph.cpp  NodeGraph.h
src/graphics/: GeneratorModules.cpp  GeneratorModules.h  GraphicsEngine.cpp  GraphicsEngine.h  OperatorModules.cpp  OperatorModules.h  Pipeline.cpp  Pipeline.h  PipelineGraph.cpp  PipelineGraph.h  PipelineModule.cpp  PipelineModule.h  Pipeline_new.cpp  Pipeline_new.h  Pipeline_old.cpp  Pipeline_old.h  RenderContext.cpp  RenderContext.h  ShaderManager.cpp  ShaderManager.h  ShaderManager_new.cpp  ShaderManager_new.h  ShaderManager_old.cpp  ShaderManager_old.h
src/graphics_engine/: GraphicsEngine.cpp  GraphicsEngine.h  Pipeline.cpp  Pipeline.h  RenderContext.cpp  RenderContext.h  ShaderManager.cpp  ShaderManager.h  main.cpp
src/node_editor/: NodeEditor.cpp  NodeEditor.h  main.cpp
src/osc/: OSCClient.cpp  OSCClient.h  OSCMessages.cpp  OSCMessages.h  OSCServer.cpp  OSCServer.h
tests/: README.md  graphics_engine_test.cpp  graphics_engine_test_new.cpp  manual_test_guide.py  run_graphics_engine_test.sh  test_system.sh
